# bevy-senzubean

./: Cargo.toml  README.md  example_torii_message.json
src/: lib.rs  main.rs  torii.rs
src/plugins/: arena.rs  mod.rs  player.rs  senzubean.rs  torii.rs
